--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "live-server": "^1.2.0",
-    "moment": "2.18.1",
+    "live-server": "^1.2.1",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.4",
     "normalize.css": "^8.0.0",
     "react": "16.0.0",
