--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ src/playground/
 .eslintrc.js
 src/tests/components/__snapshots__
 src/tests/__mocks__
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
