--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "4.2.0",
+    "history": "4.7.2",
     "moment": "^2.22.2",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.0",
